[package]
name = "mollusk-helper"
version = "0.1.0"
edition = "2021"
description = "Simplified Mollusk wrapper for Solana program testing with atomic transaction support"
license = "MIT"
repository = "https://github.com/ohaddahan/mollusk-helper"

[dependencies]
mollusk-svm = { version = "0.9", features = ["inner-instructions", "all-builtins"] }
mollusk-svm-programs-token = { version = "0.9", features = ["token", "associated-token", "token-2022"] }
mollusk-svm-programs-memo = { version = "0.9", features = ["memo", "memo-v1"] }

solana-account = "3.3"
solana-pubkey = "3.0"
solana-instruction = "3.1"
solana-address = "2.0"
solana-hash = "4.0"
solana-keypair = "3.1"
solana-signer = "3.0"
solana-message = "3.0"
solana-program-pack = "3.0"
solana-program-option = "3.0"
solana-system-interface = { version = "3.0", features = ["bincode"] }
solana-program-error = "3.0"

spl-token = { version = "9.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0", features = ["no-entrypoint"] }

thiserror = "2.0"
bincode = "1.3"

[dev-dependencies]
anyhow = "1.0"
