[package]
name = "mollusk-helper"
version = "0.1.1"
edition = "2021"
rust-version = "1.75.0"
authors = ["Ohad Dahan <ohaddahan@gmail.com>"]
description = "Simplified Mollusk wrapper for Solana program testing with atomic transaction support"
license = "MIT"
repository = "https://github.com/ohaddahan/mollusk-helper"
homepage = "https://github.com/ohaddahan/mollusk-helper"
documentation = "https://docs.rs/mollusk-helper"
readme = "README.md"
keywords = ["solana", "testing", "mollusk", "blockchain", "svm"]
categories = ["development-tools::testing", "cryptography::cryptocurrencies"]
exclude = [
    ".github/*",
    ".cargo/*",
    "tests/*",
]

[dependencies]
mollusk-svm = { version = "0.9", features = ["inner-instructions", "all-builtins"] }
mollusk-svm-programs-token = { version = "0.9", features = ["token", "associated-token", "token-2022"] }
mollusk-svm-programs-memo = { version = "0.9", features = ["memo", "memo-v1"] }

solana-account = "3.3"
solana-pubkey = "3.0"
solana-instruction = "3.1"
solana-address = "2.0"
solana-hash = "4.0"
solana-keypair = "3.1"
solana-signer = "3.0"
solana-message = "3.0"
solana-program-pack = "3.0"
solana-program-option = "3.0"
solana-system-interface = { version = "3.0", features = ["bincode"] }
solana-program-error = "3.0"

spl-token = { version = "9.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0", features = ["no-entrypoint"] }

thiserror = "2.0"
bincode = "1.3"

[dev-dependencies]
anyhow = "1.0"
